--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -24,10 +24,9 @@
 
         <ui:define name="body">
 
-            <h:form>
+            <h:form id="botoneraCaso">
                 <div class="page-header">
                     <div class="row">
-                        <div class="col-sm-10 col-xs-10">
 
 
                             <h:commandLink id="prio" disabled="#{casoController.selected.closed}" styleClass="valign-middle m-details-star">
@@ -50,29 +49,11 @@
                             </h1>
 
                             <!-- fin TAGS-->
-                        </div>
-                        <div class="col-sm-2 col-xs-2">
-                            <div class="pages pull-right">
-                                <ul class="pager pager-xs pull-right" style="margin: 0px !important;">
-                                    <li>
-                                        <h:commandLink action="#{casoController.prepareEditPreviusItem()}" style="font-weight: bold"
-                                                       title="Ir al caso anterior"
-                                                       disabled="#{casoController.selectedItemIndex eq casoController.pagination.pageFirstItem}"
-                                                       rendered="#{casoController.pagination.itemsCount > 0}">
-                                            <i class="fa fa-long-arrow-left"></i>         
-                                        </h:commandLink>
+                        <div class="pull-right">
 
-                                    </li>
-                                    <li>
-                                        <h:commandLink action="#{casoController.prepareEditNextItem()}" style="font-weight: bold"
-                                                       title="Ir al caso siguiente"
-                                                       disabled="#{casoController.selectedItemIndex eq casoController.pagination.pageLastItem}"
-                                                       rendered="#{casoController.pagination.itemsCount > 0}">
-                                            <i class="fa fa-long-arrow-right"></i>       
-                                        </h:commandLink>
-                                    </li>
-                                </ul>
-                            </div>
+                            <ui:include src="toolbarCaso.xhtml" />
+
+                          
                         </div>
                     </div>
                 </div> <!-- / .page-header -->
@@ -365,7 +346,7 @@
                                                   mode="advanced"
                                                   dragDropSupport="true"
                                                   auto="true"
-                                                  update=":mainform:messages :formlistaadjuntos :tab-adjuntos-panel :message-details-reply:parchivos"
+                                                  update=":mainform:messages :formlistaadjuntos :tab-adjuntos-panel :message-details-reply"
                                                   multiple="true"  
                                                   rendered="#{casoController.selected.open}"/>
 
@@ -381,6 +362,7 @@
 
                     </div>
 
+                    <!-- Agenda -->
                     <div class="panel no-border panel-dark">
                         <div class="panel-body text-center">
                             <h:form id="formAgendarEvento">
@@ -400,6 +382,7 @@
                         </div>
                     </div> <!-- / .panel Agenda -->
 
+                    <!--Log de Eventos-->
                     <div class="panel widget-notifications">
                         <div class="panel-heading">
                             <span class="panel-title"><i class="panel-title-icon fa fa-fire"></i>Log de Eventos</span>
@@ -425,7 +408,7 @@
                     <div class="panel no-border panel-dark">
                         <div class="panel-body text-center">
                             <p class="text-lg text-slim">
-                                Can't find the answer?
+                                Necesitas ayuda?
                             </p>
                             <div style="margin-top: 20px;">
                                 <a href="#" class="btn btn-lg btn-primary btn-flat" data-toggle="modal" data-target="#modal-faq">Contact Us</a>
@@ -436,8 +419,7 @@
 
                 <div class="col-sm-7 col-md-8 col-lg-9 col-sm-pull-5 col-md-pull-4 col-lg-pull-3 main">
 
-                    <ui:include src="toolbarCaso.xhtml" />
-                    <br/>
+
                     <ui:include src="responder.xhtml" />
 
                     <ui:include src="actividadesListForm.xhtml" />
@@ -604,7 +586,7 @@
                     <label id="textoEliminar" >¿Esta seguro de borrar el archivo?</label><br/>
                     <br/>
                     <div style="text-align: right">                       
-                        <p:commandButton value="Si" update=":mainform:messages :formlistaadjuntos :tab-adjuntos-panel :message-details-reply:parchivos"
+                        <p:commandButton value="Si" update=":mainform:messages :formlistaadjuntos :tab-adjuntos-panel :message-details-reply"
                                          actionListener="#{casoController.deleteAttachment(actionEvent)}" onclick="borrarAttachment.hide()"/>
 
                         <p:commandButton value="No" onclick="borrarAttachment.hide()" type="button" immediate="true"/>
