--- a/src/main/webapp/script/cliente/List.xhtml
+++ b/src/main/webapp/script/cliente/List.xhtml
@@ -78,8 +78,7 @@
                         <h:panelGroup layout="block" styleClass="panel panel-transparent" rendered="#{clienteController.items.rowCount gt 0}">
                             <div class="panel-heading">
                                 <span class="panel-title"> 
-                                    <go:paginatorCounts controllerMBean="#{clienteController}" 
-                                                        rendered="#{clienteController.pagination.itemsCount gt 0}"/>
+                                    <go:paginatorCounts controllerMBean="#{clienteController}"/>
                                 </span>
 
                                 <div class="panel-heading-controls">
@@ -87,93 +86,94 @@
                                 </div>
                             </div>
                             <div class="panel-body no-padding">
-                                <h:dataTable id="panelG1" value="#{clienteController.items}" 
-                                             styleClass="table table-hover"
-                                             var="item">
+                                <div class="table-responsive">
+                                    <h:dataTable id="panelG1" value="#{clienteController.items}" 
+                                                 styleClass="table table-hover"
+                                                 var="item">
 
-                                    <h:column >
-                                        <f:facet name="header">
-                                            <h:outputText value="Nombre"/>
-                                        </f:facet>
-                                        <h:outputText value="#{item.capitalFullName}"/>
-                                    </h:column>
+                                        <h:column >
+                                            <f:facet name="header">
+                                                <h:outputText value="Nombre"/>
+                                            </f:facet>
+                                            <h:outputText value="#{item.capitalFullName}"/>
+                                        </h:column>
 
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Rut"/>
-                                        </f:facet>
-                                        <h:outputText value="#{item.rut}"/>
-                                    </h:column>
+                                        <h:column>
+                                            <f:facet name="header">
+                                                <h:outputText value="Rut"/>
+                                            </f:facet>
+                                            <h:outputText value="#{item.rut}"/>
+                                        </h:column>
 
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Email"/>
+                                        <h:column>
+                                            <f:facet name="header">
+                                                <h:outputText value="Email"/>
 
-                                        </f:facet>
-                                        <ui:repeat value="#{item.emailClienteList}" var="r" >
-                                            <p:outputLabel value="#{r.emailCliente} (#{r.casoList.size()} casos)"/>
-                                        </ui:repeat>
-                                    </h:column>
+                                            </f:facet>
+                                            <ui:repeat value="#{item.emailClienteList}" var="r" >
+                                                <p:outputLabel value="#{r.emailCliente} (#{r.casoList.size()} casos)"/>
+                                            </ui:repeat>
+                                        </h:column>
 
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Casos"/>
-                                        </f:facet>
-                                        <p:outputLabel value="#{item.casoList.size()} "/>
-                                    </h:column>
+                                        <h:column>
+                                            <f:facet name="header">
+                                                <h:outputText value="Casos"/>
+                                            </f:facet>
+                                            <p:outputLabel value="#{item.casoList.size()} "/>
+                                        </h:column>
 
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="TPC"/>
-                                        </f:facet>
-                                        <h:outputText value="#{not empty item.productoContratadoList ? 'Si':'No'}"/>
-                                    </h:column>
+                                        <h:column>
+                                            <f:facet name="header">
+                                                <h:outputText value="TPC"/>
+                                            </f:facet>
+                                            <h:outputText value="#{not empty item.productoContratadoList ? 'Si':'No'}"/>
+                                        </h:column>
 
-                                    <h:column>
-                                        <f:facet name="header">
-                                            <h:outputText value="Accion"/>
-                                        </f:facet>
-
-
-                                        <div class="btn-toolbar">
-
-                                            <p:commandLink id="viewBtn" action="#{clienteController.prepareView(item)}" title="Ver" ajax="false"
-                                                           styleClass="btn btn-sm btn-outline btn-primary"
-                                                           >
-                                                <i class="fa fa-eye"/>
-                                            </p:commandLink>
-
-                                            <p:commandLink id="editBtn" action="#{clienteController.prepareEdit(item)}" title="Editar" ajax="false"
-                                                           styleClass="btn btn-sm btn-outline btn-primary"
-                                                           rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">
-                                                <i class="fa fa-edit"/>
-                                            </p:commandLink>
-
-                                            <p:commandLink  id="showDialogButton" 
-                                                            actionListener="#{clienteController.prepareEditPK(item.idCliente)}"
-                                                            rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
-                                                            styleClass="btn btn-sm btn-outline btn-danger"
-                                                            title="Eliminar"
-                                                            oncomplete="PF('confirmation').show()"
-                                                            update=":confirmDialog"
-                                                            disabled="#{not clienteController.puedeEliminar(item)}">
-                                                <i class="fa fa-times"/>
-
-                                            </p:commandLink>
-                                        </div>
-
-                                    </h:column>
+                                        <h:column>
+                                            <f:facet name="header">
+                                                <h:outputText value="Accion"/>
+                                            </f:facet>
 
 
+                                            <div class="btn-toolbar">
+
+                                                <p:commandLink id="viewBtn" action="#{clienteController.prepareView(item)}" title="Ver" ajax="false"
+                                                               styleClass="btn btn-sm btn-outline btn-primary"
+                                                               >
+                                                    <i class="fa fa-eye"/>
+                                                </p:commandLink>
+
+                                                <p:commandLink id="editBtn" action="#{clienteController.prepareEdit(item)}" title="Editar" ajax="false"
+                                                               styleClass="btn btn-sm btn-outline btn-primary"
+                                                               rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">
+                                                    <i class="fa fa-edit"/>
+                                                </p:commandLink>
+
+                                                <p:commandLink  id="showDialogButton" 
+                                                                actionListener="#{clienteController.prepareEditPK(item.idCliente)}"
+                                                                rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                                                styleClass="btn btn-sm btn-outline btn-danger"
+                                                                title="Eliminar"
+                                                                oncomplete="PF('confirmation').show()"
+                                                                update=":confirmDialog"
+                                                                disabled="#{not clienteController.puedeEliminar(item)}">
+                                                    <i class="fa fa-times"/>
+
+                                                </p:commandLink>
+                                            </div>
+
+                                        </h:column>
 
 
-                                </h:dataTable>
+
+
+                                    </h:dataTable>
+                                </div>
                             </div>
 
                             <div class="panel-footer">
                                 <div class="row text-center">
-                                    <go:paginatorCounts controllerMBean="#{clippingController}" 
-                                                        rendered="#{clippingController.pagination.itemsCount gt 0}"/>
+                                    <go:paginatorCounts controllerMBean="#{clienteController}"/>
                                 </div>
                             </div>
                         </h:panelGroup>
@@ -191,58 +191,32 @@
 
 
 
-            <p:dialog id="confirmDialog" showEffect="fade" hideEffect="fade" 
+
+
+            <p:confirmDialog closeOnEscape="true" global="true" showEffect="fade" hideEffect="explode" >
+                <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
+                <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/> 	
+            </p:confirmDialog>
+
+
+
+
+
+            <p:dialog id="confirmDialog" showEffect="fade" hideEffect="clip" modal="true"
                       header="Iniciando proceso de eliminación" widgetVar="confirmation">
-
-                <h:outputText value="Está seguro de eliminar al cliente #{clienteController.selected.nombres} #{clienteController.selected.apellidos}?"/>
-                <br/>
-                <p:outputLabel value="Casos asociados al cliente:"/>
-                <p:scrollPanel mode="native" style="height: 100px;border-color: window;border: 0;">
-                    <h:panelGrid columns="1">
-                        <c:forEach items="#{clienteController.selected.casoList}" var="item" >
-                            <h:commandLink action="#{casoController.filterByIdCaso(item.idCaso)}" >
-                                <h:outputText styleClass="ticket-status" 
-                                              style="background: \##{item.idSubEstado.backgroundColor}; color: \##{item.idSubEstado.fontColor};" value="#{item.idSubEstado.nombre}"
-                                              />
-                                <h:outputText value=" #{item.tipoCaso.nombre} N°#{item.idCaso} - #{item.tema}"/>
-                            </h:commandLink>
-                        </c:forEach>
-                    </h:panelGrid>
-                </p:scrollPanel>
-
-                <p:outputLabel value="Casos asociados a cada email del cliente:"/>
-                <p:scrollPanel mode="native" style="height: 100px;border-color: window;border: 0;">
-                    <h:panelGrid columns="1">
-                        <c:forEach items="#{clienteController.selected.emailClienteList}" var="email" >
-                            <c:forEach items="#{email.casoList}" var="item" >
-                                <h:commandLink action="#{casoController.filterByIdCaso(item.idCaso)}" >
-                                    <h:outputText styleClass="ticket-status" 
-                                                  style="background: \##{item.idSubEstado.backgroundColor}; color: \##{item.idSubEstado.fontColor};" value="#{item.idSubEstado.nombre}"
-                                                  />
-                                    <h:outputText value=" #{item.tipoCaso.nombre} N°#{item.idCaso} - #{item.tema}"/>
-                                </h:commandLink>
-                            </c:forEach>
-                        </c:forEach>
-                    </h:panelGrid>
-                </p:scrollPanel>
                 <h:form id="formDelete">
-                    <f:facet name="footer">
-                        <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{clienteController.destroy()}" 
-                                         ajax="false" />
-                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
-                    </f:facet>
+                    <h:outputText value="Está seguro de eliminar al cliente #{clienteController.selected.nombres} #{clienteController.selected.apellidos}?"/>
+                    <p:commandButton id="confirm" value="Si, Eliminar" actionListener="#{clienteController.destroy()}" action="/script/pagina"
+                                     update=":form0" oncomplete="PF('confirmation').hide()"/>
+                    <p:commandButton id="decline" value="No, Cancelar" onclick="PF('confirmation').hide()" type="button" /> 
+
                 </h:form>
             </p:dialog>
 
-            <p:dialog id="helpDialog" showEffect="fade" hideEffect="clip" modal="true"
-                      header="Help" widgetVar="helpDialog">
-                <div class="row note note-info hidden-xs">
-                    <p><h:outputText  value="#{bundle.ayudaClientes}" escape="false"/></p>
-                </div>  
 
-                <h:button id="decline" value="Cerrar" onclick="PF('helpDialog').hide()"  /> 
 
-            </p:dialog>
+
+
 
         </ui:define>
     </ui:composition>
