Actualizacion de Cli y prod New Componente y sub componente
Actualizacion de Cli y prod New Componente y sub componente

--- a/src/main/webapp/script/cliente/List.xhtml
+++ b/src/main/webapp/script/cliente/List.xhtml
@@ -133,7 +133,7 @@
 
                                         <h:column>
                                             <f:facet name="header">
-                                                <h:outputText value="Accion"/>
+                                                <h:outputText value="Acción"/>
                                             </f:facet>
 
 
